src/objects/SMLSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object contains custom settings for SessionM app</description>
    <fields>
        <fullName>CleanUpServiceEnable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Clean Up Service enabled? Default True</description>
        <inlineHelpText>Is Clean Up Service enabled? Default is True. If Marked False - clean up service would not execute.</inlineHelpText>
        <label>CleanUp Service Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CleanUpServiceTimeFrame__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Time interval between two consecutive runs of clean of Services</description>
        <inlineHelpText>The time interval between two consecutive runs of clean up Services - It is in Hours - Min 1 Max 48.</inlineHelpText>
        <label>CleanUp Service TimeFrame</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CleanUpServicesRecordsToDelete__c</fullName>
        <defaultValue>5000</defaultValue>
        <description>Limit of Number of records to delete when executing cleanup service - Min 1 Max 10000</description>
        <inlineHelpText>Limit of Number of records to delete when executing cleanup service - Min 1 Max 10000</inlineHelpText>
        <label>CleanUp Services Record To Delete</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailFieldInAccounts__c</fullName>
        <description>API field name of field that contains user&apos;s email address in Accounts object</description>
        <inlineHelpText>API field name of field that contains user&apos;s email address in Accounts object</inlineHelpText>
        <label>Email Field in Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableEnrollInCommunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EnableEnrollInCommunity</description>
        <inlineHelpText>EnableEnrollInCommunity</inlineHelpText>
        <label>Enable Enroll in Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxActivityRecords__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Max Activity Records to fetch</description>
        <inlineHelpText>Max Activity Records to fetch</inlineHelpText>
        <label>Max Activity Records</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Page Size for Activity Screen</description>
        <inlineHelpText>Page Size for Activity Screen</inlineHelpText>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionMTimeOut__c</fullName>
        <defaultValue>3500</defaultValue>
        <description>SessionM Time Out in milliseconds</description>
        <inlineHelpText>SessionM Time Out in milliseconds</inlineHelpText>
        <label>SessionM Time Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SessionMtoSalesforceMappingsAPIName__c</fullName>
        <description>SessionM to Salesforce Mappings API Name</description>
        <inlineHelpText>SessionM to Salesforce Mappings API Name</inlineHelpText>
        <label>SessionM to Salesforce Mappings API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SessionM List Settings</label>
</CustomObject>